--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2022 by Daniel R. Driver.
+% Copyright (c) 2023 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -48,8 +48,8 @@
 \email{daniel.driver@astheology.ns.ca}
 \officehours{Thursdays, 2:00--4:00 \PM}
 
-\semester{Fall 2022}
-\meets{\Int{Mondays}{Thursdays}}% \meets{on}{at}{in}
+\semester{Fall 2023}
+\meets{Thursdays}% \meets{on}{at}{in} - on could be: \Int{Mondays}{Thursdays}
       {6:00--8:30 \PM}% if online, it prints "From 9:00 AM"
       {Flahiff Room}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
@@ -62,17 +62,16 @@
 	will be broadly ecumenical, with case studies that exemplify Jewish and
 	Christian interpretation.
 
-	The broad sweep of biblical tradition will be presented through a
-	survey of representative books from the Law, the Prophets, and the
-	Writings. To help foster an ecumenical outlook, primary readings
-	from the Bible will be supplemented by case studies of classic
-	Jewish and Christian readings of biblical texts. Students will
-	develop their exegetical skills by studying these examples, and so
-	learn to appreciate the diverse literary, canonical, cultural,
-	historical, hermeneutical, and theological elements involved in
-	biblical interpretation. In addition, the course will consider some
-	ways that the Hebrew Bible/Old Testament can feature in the practice
-	of ministry and in the spiritual practice of faith communities.
+	The broad sweep of biblical tradition will be presented through a survey
+	of representative books from the Law, the Prophets, and the Writings. To
+	help foster an ecumenical outlook, primary readings from the Bible will
+	be supplemented by case studies of classic readings of biblical texts.
+	Students will develop their exegetical skills by studying these
+	examples, and so learn to appreciate the diverse literary, canonical,
+	cultural, historical, hermeneutical, and theological elements involved
+	in biblical interpretation. In addition, the course will consider some
+	ways that the Hebrew Bible/Old Testament can feature in the practice of
+	ministry and in the spiritual practice of faith communities.
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
 	By the end of the course students should be able to:
@@ -80,24 +79,23 @@
 		locate a few important biblical sites on a map;
 		give key dates for Israel's history and summarize the succession of superpowers in the ancient Near Eastern political theatre from Egypt to Greece;
 		recognize and cite examples of most genres of biblical literature;
-%		defend a decision to pronounce or circumlocute the divine name;
+		defend a decision to pronounce or circumlocute the Divine Name;
 		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
 		report on parallel and divergent material across the Law and the Prophets, such as the uses of the Divine Name or the rationales for sabbath observance;
 		classify and begin to evaluate a variety of ancient and modern approaches to the Bible.
 
 	Students should also be able to identify settings in which the
 	Scriptures of Israel are read (notably the synagogue, church, and
-	academy), employ terminology appropriate to these communities,
-	recognize where their own biographies place them in relation to the
-	Hebrew Bible/Old Testament and its uses, and monitor and test their
-	individual attitudes and assumptions. They should be able to extend
-	their awareness of the Bible's contemporary readers to the Bible's
-	long history of reception. Finally, students should begin to infer
-	what Jesus meant in speaking of “the law of Moses, the prophets,
-	and the psalms” (Luke 24:44), and so learn to hear claims about New
-	Testament fulfilment of scripture in light of the unique voice that
-	the Old Testament retains along side of the New in Christian
-	Scripture.
+	academy), employ terminology appropriate to these communities, recognize
+	where their own biographies place them in relation to the Hebrew
+	Bible/Old Testament and its uses, and monitor and test their individual
+	attitudes and assumptions. They should be able to extend their awareness
+	of the Bible's contemporary readers to the Bible's long history of
+	reception. Finally, students should begin to infer what Jesus meant in
+	speaking of “the law of Moses, the prophets, and the psalms” (Luke
+	24:44), and so learn to hear claims about New Testament fulfilment of
+	scripture in light of the unique voice that the Old Testament retains
+	along side of the New in Christian Scripture.
 }% end of learning objectives
 
 \input{\incl/preamble}
@@ -115,7 +113,7 @@
 
 The following text is required. Students are strongly encouraged to
 purchase their own copy. A non-circulating copy is held in the AST
-Library reference section (BS 895 J4 2014).
+Library: Reference BS 895 J4 2014.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -140,11 +138,13 @@ the Apocrypha}, 5th ed. (Oxford: Oxford University Press, 2018).
 
 Supplementary readings will be recommended throughout the semester and
 either placed on reserve or made available through the course website.
-See \autoref{bib} for full bibliographic details. Please give this
-material good effort and attention.
+See the bibliography below, in \autoref{bib}. Please give this material
+good effort and attention.
 
-
-Introductions to the Hebrew Bible/Old Testament abound. I have not assigned one for this class, though I have used a number of them in the past. Students may find one or more the following introductory and companion volumes useful.
+Introductions to the Hebrew Bible/Old Testament abound. I have not
+required one for this class, though I have assigned a number of them in
+the past. Students may find one or more the following introductory and
+companion volumes useful.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -157,32 +157,37 @@ Introductions to the Hebrew Bible/Old Testament abound. I have not assigned one 
 	\bibitem{bb05} Birch, Bruce, Walter Brueggemann, Terence E. Fretheim, and David L. Petersen.
 	\emph{A Theological Introduction to the Old Testament}.
 	2nd ed. Nashville: Abingdon, 2005.
-	AST library: BS 1192.5 T43 2005.
+	AST Library: BS 1192.5 T43 2005.
+
+	\bibitem{wbtl21} Brueggemann, Walter, and Tod Linafelt.
+	\emph{An Introduction to the Old Testament: The Canon and Christian Imagination}.
+	3rd ed. Louisville: Westminster John Knox, 2021.
+	AST Library (2nd ed.): BS 1140.3 B78 2012.
 
 	\bibitem{scms16} Chapman, Stephen B., and Marvin A. Sweeney, eds.
 	\emph{The Cambridge Companion to the Hebrew Bible/Old Testament}.
 	New York: Cambridge University Press, 2016.
-	AST library: BS 1140.3 C35 2016.
+	AST Library: BS 1140.3 C35 2016.
 
 	\bibitem{jc04} Collins, John J.
 	\emph{Introduction to the Hebrew Bible}.
 	Minneapolis: Fortress, 2004.
-	AST library: BS 1140.3 C65 2004.
+	AST Library: BS 1140.3 C65 2004.
 
 	\bibitem{mc10} Coogan, Michael D.
 	\emph{The Old Testament: A Historical and Literary Introduction to the Hebrew Scriptures}.
 	3rd ed. New York: Oxford University Press, 2014.
-	AST library: BS 1197 C56 2014.
+	AST Library: BS 1197 C56 2014.
 
 	\bibitem{pdjr05} Davies, Philip R., and John Rogerson.
 	\emph{The Old Testament World}.
 	2nd ed. Louisville: Westminster John Knox, 2005.
-	AST library: BS 1171.3 D38 2005.
+	AST Library: BS 1171.3 D38 2005.
 
 	\bibitem{ed19} Davis, Ellen F.   
 	\emph{Opening Israel's Scriptures}.
 	New York: Oxford University Press, 2019.
-	AST library: \href{https://doi.org/10.1093/oso/9780190260545.001.0001}{online}.
+	AST Library: \href{https://doi.org/10.1093/oso/9780190260545.001.0001}{online}.
 
 	\bibitem{ahjw09} Hill, Andrew E., and John H. Walton.
 	\emph{A Survey of the Old Testament}.
@@ -191,7 +196,7 @@ Introductions to the Hebrew Bible/Old Testament abound. I have not assigned one 
 	\bibitem{hbfb} Kaminsky, Joel S., and Joel N. Lohr.
 	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
 	Nashville: Abingdon Press, 2015.
-	AST library: BS 1171.3 K39 2015 and \href{https://search.ebscohost.com/login.aspx?direct=true&AuthType=cookie,ip,shib&db=nlebk&AN=969753&site=ehost-live&scope=site&custid=s5315951}{online}.
+	AST Library: BS 1171.3 K39 2015 and \href{https://search.ebscohost.com/login.aspx?direct=true&AuthType=cookie,ip,shib&db=nlebk&AN=969753&site=ehost-live&scope=site&custid=s5315951}{online}.
 
 	\bibitem{jk07} Kugel, James L. 
 	\emph{How To Read the Bible: A Guide to Scripture, Then and Now}.
@@ -200,35 +205,35 @@ Introductions to the Hebrew Bible/Old Testament abound. I have not assigned one 
 	\bibitem{hprb10} Page, Hugh R., Jr., and Randall C. Bailey, eds.
 	\emph{The Africana Bible: Reading Israel’s Scriptures from Africa and the African Diaspora}.
 	Minneapolis: Fortress, 2010.
-	AST library: BS 1171.3 A37 2010.
+	AST Library: BS 1171.3 A37 2010.
 
 	\bibitem{rr86} Rendtorff, Rolf.
 	\emph{The Old Testament: An Introduction}.
 	Philadelphia: Fortress, 1986.
-	AST library: BS 1140.2 R3913 1986.
+	AST Library: BS 1140.2 R3913 1986.
 	
 \end{thebibliography}
 \endgroup
 
-The following basic works are also worth owning and consulting.
+Also, the following basic works are also worth consulting and even owning.
 \cite{rlgs} in particular contains sound advice on core skills like
 reading religious texts, writing essays and reviews, revising essays,
 making oral presentations, and learning languages.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Making Sense}% use the longest item in the bibliography
+\begin{thebibliography}{Making}% use the longest item in the bibliography
 
-	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\bibitem[Making]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
-	3rd ed. Toronto: Oxford University Press, 2019.
+	3rd ed. Toronto: Oxford University Press, 2019. AST Library: Reference BL 41 N67 2019.
 
 	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
 	2nd ed. Atlanta: SBL Press, 2014.
 	Designed to augment \href{https://proxy.openathens.net/login?qurl=https%3A%2F%2Fwww.chicagomanualofstyle.org%2Fbook%2Fed17%2Ffrontmatter%2Ftoc.html}{\emph{Chicago Style}}
 	(the standard at AST), there is also a free
-	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}.
+	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}. AST Library: Reference PN 147 S26 2014.
 
 \end{thebibliography}
 \endgroup
@@ -240,8 +245,6 @@ making oral presentations, and learning languages.
 We will adhere to the schedule in \autoref{schedule} as closely as
 possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
-
-\newcommand\HBFB[1]{\cite[#1]{hbfb}}
 
 \setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
 \begin{table}[htbp]% set to `p' to put the schedule on its own page
@@ -256,24 +259,24 @@ the needs of the class.
 		& Genesis 1--11        & Davis \cite{ed03}; Seitz \cite{cs96} &  7 Sep. \\
 		& Genesis 12--50       & Levenson                 \cite{jl12} & 14 Sep. \\
 		& Exodus 1--18         & McGinnis                 \cite{cm12} & 21 Sep. \\
-		& Exodus 19--40        & Anderson                 \cite{ga17} & 28 Sep. \\
-	    & Leviticus (all if unstated) & Anderson          \cite{ga17} &  5 Oct. \\
+		& Exodus 19--40        & Sommer                   \cite{bs15} & 28 Sep. \\
+	    & Leviticus (all if no chs) & Anderson            \cite{ga17} &  5 Oct. \\
 		& Deuteronomy          & Heschel \cite{ah51}; Moberly \cite{wm13} & 12 Oct. \\
-	\reminder{A first short paper is \textbf{due} by the end of the sixth week of class}{17 Oct.} \\ [1ex]% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
+	\reminder{A short paper is \textbf{due} by the end of the \textbf{sixth week} of class}{17 Oct.} \\ [1ex]% Have moved btw wks 5 and 6 depending on how holidays (eg, Thanksgiving Monday) impact the schedule
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
 		& Joshua; Judges       & Trible                   \cite{pt84} & 19 Oct. \\
-	\noclass{Reading Week}                                            & 24--27 Oct. \\
+	\noclass{Reading Week from Tuesday to Friday}                     & 24--27 Oct. \\
 		& 1 \& 2 Samuel        & Chapman                  \cite{sc16} &  2 Nov. \\
 		& 1 \& 2 Kings         & Alter                    \cite{ra81} &  9 Nov. \\
 		& Isaiah 1--12, 36--40 & Irenaeus \cite{il97}; Davis \cite{ed14} & 16 Nov. \\
 		& Hosea--Jonah         & Nogalski         \cite{jn07a, jn07b} & 23 Nov. \\
-	\reminder{A second short paper is \textbf{due} by the end of the tenth week of class}{2 Dec.}    \\ [1ex]% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
+	\reminder{A short paper is \textbf{due} by the end of the \textbf{eleventh week} of class}{28 Nov.} \\ [1ex]% NB Moved back from wk 11 to wk 10 because of the nearness of the last day of class in F22. Perhaps move back to wk 11 in future.
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8; Ecclesiastes & deClaissé-Walford \cite{ndw14}; Fox \cite{mf04} & 30 Nov. \\ [1ex]
+		& Psalms 1--8; Ecclesiastes & Childs \cite{bc69}; Fox \cite{mf04} & 30 Nov. \\
 %		& Ecclesiastes         & Dell \cite{kd13} or  &  7 Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{14 Dec.} \\
@@ -284,7 +287,7 @@ the needs of the class.
   \label{schedule}
 \end{table}
 
-See the AST website for a list of other \href{http://www.astheology.ns.ca/students/academic-dates.html}{important dates}.
+See the AST website for a list of other \href{https://www.astheology.ns.ca/students/index.html}{important dates}.
 
 \section{Evaluation}
 \label{evaluation}
@@ -293,76 +296,130 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item \textbf{Writing prompts} will be given throughout the
-	semester. They are low-risk writing exercises designed to encourage
-	careful reading of the assigned material, and to help explore its
-	significance. Individual posts are not marked, though points may be
-	deducted from your final grade if the exercise is not taken
-	seriously. Prompt responses submitted online should be around 250
-	words long, and should not exceed 300 words. Try to post the in the
-	morning of class days, after you do the reading but before you
-	listen to the lecture. You are invited (but not strictly required)
-	to respond to and interact with classmates on the forums through the
-	rest of the day.
+	\item \textbf{Notes and quotes} will be solicited from students at the
+	start of each class. These are to be drawn from the primary reading
+	assigned for each week. What do you note about the material on this
+	reading? What words, phrases, or verses stand out to you from the
+	\cite{njps} edition? Pay attention to the things you notice from a
+	survey of large sections of the Bible. Stay alert, too, to details that
+	strike you from the translation and presentation of the Hebrew
+	(Masoretic) text. Make notes as you read. Finally, be prepared to share
+	three minutes of highlights with the class. Participation is required.
+
+%	\item \textbf{Writing prompts} will be given throughout the
+%	semester. They are low-risk writing exercises designed to encourage
+%	careful reading of the assigned material, and to help explore its
+%	significance. Individual posts are not marked, though points may be
+%	deducted from your final grade if the exercise is not taken
+%	seriously. Prompt responses submitted online should be around 250
+%	words long, and should not exceed 300 words. Try to post the in the
+%	morning of class days, after you do the reading but before you
+%	listen to the lecture. You are invited (but not strictly required)
+%	to respond to and interact with classmates on the forums through the
+%	rest of the day.
 
 	\item Two \textbf{short papers} will facilitate student engagement
 	with the art of biblical interpretation. One is keyed to the
 	exposition of a model, the other to a short biblical text. Each
 	should be about 2,500 words in length. Either paper (your choice) is
-	due at the end of the fifth week of class; the other one is due at
-	the end of the tenth week.% NB Moved back from wks 6 and 11 due to unusual scheduling issues. Perhaps return to 6 and 11 in future.
+	due at the end of the sixth week of class; the other one is due at
+	the end of the eleventh week.
+	% Deadlines have sometimes been wks 6 and 11 or wks 5 and 10 depending
+	% on scheduling issues. Make sure that what is stated here matches the
+	% schedule above.
 
 	\begin{enumerate}
 
-		\item A \textbf{review essay} invites student reflection on a
-		model work of biblical interpretation. The short books by
-		\cite{heschel} and \cite{irenaeus} are the primary options,
-		though with permission you may also select one of the
-		supplementary articles. Note that a review is not the same thing
-		as a report. Devote the first half of the paper to a summary the
-		interpretation or argument under review, and be mindful that
-		traditional interpretation requires special attention to
-		context. (Irenaeus' reading of Isaiah or the Jewish tradition
-		around sabbath observance are not the same thing as an academic
-		article on the Book of the Twelve.) Devote the second half of
-		the paper to critical analysis and evaluation of your chosen
-		example. Be fair, but do not fail to take a position. The paper
-		needs to develop a \textbf{thesis}. See me and \cite[Chs 3, 5–7,
-		11]{rlgs} for guidance.
+		\item A \textbf{review essay} invites student reflection on a model
+		work of biblical interpretation. Approved options are listed as
+		supplementary readings in \autoref{schedule}. Alternatively, in
+		consultation with the professor, you may select another
+		supplementary article from \autoref{bib} or propose an entirely
+		different source.
+		
+		Note that a review is not the same thing as a report. Devote the
+		first half of the paper to a summary the interpretation or argument
+		under review, and be mindful that traditional interpretation
+		requires special attention to context. (Irenaeus's reading of Isaiah
+		is are not the same thing as a modern academic article on Isaiah.)
+		Devote the second half of the paper to critical analysis and
+		evaluation of your chosen example. Be fair, but do not fail to take
+		a position. The paper needs to develop a \textbf{thesis}. See me and
+		\cite[chs 3, 5–7, 11]{rlgs} for guidance.
 
 		\item An \textbf{exegetical essay} provides an opportunity for
-		direct work with the biblical text. The first task is to
-		identify an appropriate text. Select a suitably short passage
-		from the HB/OT. Then, conduct an analysis and explication of it.
-		Interact with \cite{hbfb} and at least two other commentators.
-		Advance a \textbf{thesis} that relates to the text itself. See
-		me and \cite[Chs 3, 5, 8, 11]{rlgs} for guidance.
+		direct work with the biblical text. The first task is to identify an
+		appropriate text. Select a suitably short passage from the HB/OT.
+		Then, conduct an analysis and explication of it. Interact with at
+		least three sources and commentators. Advance a \textbf{thesis} that
+		relates to the text itself. See me and \cite[chs 3, 5, 8, 11]{rlgs}
+		for guidance.
 
 	\end{enumerate}
 
-\Int{
-	\item One week, instead of answering a writing prompt, each student
-	will make an \textbf{online presentation} on one of the twelve
-	supplementary articles. Be creative! It may take the form of a
-	podcast or online video, and should be sharable by URL (try
-	SoundCloud, YouTube, or Vimeo). The presentation should last 8–10
-	minutes (12 min at most). It must begin with a brief (3–5~min)
-	summary of the article. The balance of the time should be spent
-	helping other readers elaborate, reflect on, test, challenge, or
-	extend the main ideas presented there. Post your link to the forums
-	by the morning so that you can help shape the forum discussions on
-	the same article.
-}{
-	\item Each student will lead a \textbf{seminar discussion} of one
-	chapter from the HB/OT, freely chosen from a week's primary reading.
-	The discussion should last about 25~minutes. It needs to begin with
-	a brief (5~min) \textbf{outline} of the chapter. Outlines must be
-	original, not borrowed from commentators. They should be circulated
-	as handouts and explained orally. The balance of the time should be
-	spent helping the class discover, elaborate, reflect on, test, or
-	otherwise explore the meaning of the passage. Critical to success
-	here is the ability to ask good questions of the Bible.
-}
+%\Int{
+%	\item One week, instead of answering a writing prompt, each student
+%	will make an \textbf{online presentation} on one of the twelve
+%	supplementary articles. Be creative! It may take the form of a
+%	podcast or online video, and should be sharable by URL (try
+%	SoundCloud, YouTube, or Vimeo). The presentation should last 8–10
+%	minutes (12 min at most). It must begin with a brief (3–5~min)
+%	summary of the article. The balance of the time should be spent
+%	helping other readers elaborate, reflect on, test, challenge, or
+%	extend the main ideas presented there. Post your link to the forums
+%	by the morning so that you can help shape the forum discussions on
+%	the same article.
+%}{
+%	\item Each student will lead a \textbf{seminar discussion} of one
+%	chapter from the HB/OT, freely chosen from a week's primary reading.
+%	The discussion should last about 25~minutes. It needs to begin with
+%	a brief (5~min) \textbf{outline} of the chapter. Outlines must be
+%	original, not borrowed from commentators. They should be circulated
+%	as handouts and explained orally. The balance of the time should be
+%	spent helping the class discover, elaborate, reflect on, test, or
+%	otherwise explore the meaning of the passage. Critical to success
+%	here is the ability to ask good questions of the Bible.
+%}
+
+	\item \textbf{Seminar discussions}: Graduate students will lead
+	\textbf{two} seminar discussions over the course of the semester;
+	undergraduate (BTh) students will lead \textbf{one}. Handouts may be
+	developed and circulated, but they are not required as part of the mark.
+	
+
+	\begin{enumerate}
+
+		\item Each student in the course must lead a discussion of one
+		chapter from the primary reading, to occur in the same week in which
+		it is assigned. Any chapter may be selected. Discussion should last
+		twenty minutes. It should begin with a brief (maximum five-minute)
+		overview of the chapter and critical issues raised by it. The
+		balance of the time should be spent helping the class discover,
+		elaborate, reflect on, test, or otherwise explore the meaning of the
+		passage. Vital to success here is the ability to ask good questions
+		of the Bible.
+		
+		\item Each graduate student must lead a second discussion on a
+		supplementary reading. If the reading selection deviates from what
+		is set in the syllabus, consult with the professor to make sure the
+		alternate reading is circulated at least one week in advance. These
+		seminars, too, should occur in the same week in which the material
+		is assigned and should last twenty minutes. The allocation of time
+		is different, however. Approximately fifteen minutes should be given
+		to summary and analysis, with just five minutes at the end for
+		questions and class discussion. The goal here is to report on the
+		results of an appreciative but critical inquiry into an example of
+		premier biblical interpretation.
+		
+		\item Students are invited to align their writing with their work
+		planning and leading seminars. For example, it is perfectly
+		acceptable to lead a discussion on the biblical chapter in which the
+		short passage for your exegetical essay appears. It is also
+		acceptable to let class discussion spur revisions to your paper, of
+		course with the understanding that you credit others appropriately
+		for their input.
+
+	\end{enumerate}
 
 \end{enumerate}
 
@@ -374,24 +431,25 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Writing Prompts  & 25\% \\
-    Review Essay     & 25\% \\
-    Exegetical Essay & 25\% \\
-    \Int{Online Presentation}{Seminar Discussion} & 25\% \\
+    Notes \& Quotes     & 20\% \\
+    Review Essay        & 30\% \\
+    Exegetical Essay    & 30\% \\
+    Seminar Discussions & 20\% \\
+%    \Int{Online Presentation}{Seminar Discussion} & 20\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
   \label{grade-dist}
 \end{table}
 
-%AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
+%AST's \href{https://www.astheology.ns.ca/students/resources.html}{Academic
 %Calendar} provides guidelines and detailed criteria for academic
 %assessment. Marks are assigned by letter grade using these benchmarks.
 
 \input{\policy/grades}
 \input{\policy/other}
 
-\section{Bibliography}
+\section{Further Bibliography}
 \label{bib}
 
 Literature on the Bible is vast. The works listed here have been
@@ -401,6 +459,9 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{99}
+\makeatletter%https://tex.stackexchange.com/a/114434
+\addtocounter{\@listctr}{13}
+\makeatother
 
 \bibitem{ra81} Alter, Robert. “The Techniques of Repetition.” Pages 88–113 in \emph{The Art of Biblical Narrative}. New York: Basic Books, 1981.
 
@@ -414,9 +475,13 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 
 \bibitem{bc79} Childs, Brevard S. \emph{Introduction to the Old Testament as Scripture}. Philadelphia: Fortress, 1979.
 
-\bibitem{bc92} Childs, Brevard S. \emph{Biblical Theology of the Old and New Testaments: Theological Reflection on the Christian Bible}. Minneapolis: Fortress, 1992.
+\bibitem{bc85} Childs, Brevard S. \emph{Old Testament Theology in a Canonical Context}. Philadelphia: Fortress, 1985.
+
+%\bibitem{bc92} Childs, Brevard S. \emph{Biblical Theology of the Old and New Testaments: Theological Reflection on the Christian Bible}. Minneapolis: Fortress, 1992.
 
 \bibitem{bc04} Childs, Brevard S. \emph{The Struggle to Understand Isaiah as Christian Scripture}. Grand Rapids: Eerdmans, 2004.
+
+\bibitem{bc69} Childs, Brevard S. “Psalm 8 in the Context of the Christian Canon.” Pages 85--93 in \emph{Canon as Rule and Guide: Collected Essays}. Edited by Daniel R. Driver. Tübingen: Mohr Siebeck, 2023. Essay first published in 1969.
 
 \bibitem{ed03} Davis, Ellen F. “Teaching the Bible Confessionally in the Church.” Pages 9–26 in \emph{The Art of Reading Scripture}. Edited by Ellen F. Davis and Richard B. Hays. Grand Rapids: Eerdmans, 2003.
 
@@ -462,9 +527,17 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 
 \bibitem{gs92} Sheppard, Gerald T. “Theology and the Book of Psalms.” \emph{Interpretation} 46.2 (1992): 143–55.
 
+\bibitem{bs15} Sommer, Benjamin D. “What Happened at Sinai? Maximalist and Minimalist Approaches.” Pages 27–98 in \emph{Revelation and Authority: Sinai in Jewish Scripture and Tradition}. New Haven: Yale University Press, 2015.
+
 \bibitem{pt84} Trible, Phyllis. “An Unnamed Woman: The Extravagance of Violence.” Pages 65–91 in \emph{Texts of Terror: Literary-Feminist Readings of Biblical Narratives}. Overtures to Biblical Theology. Philadelphia: Fortress, 1984.
 
 \end{thebibliography}
 \endgroup
+
+For additional literature, I highly recommend exploring \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.oxfordbibliographies.com/obo/page/biblical-studies}{Oxford Bibliographies: Biblical Studies (Full Text)}.
+You can access the database while on campus or remotely with your OpenAthens
+credentials. Numerous articles by subject-area specialists appear under such
+headings as: Ancient Near East; Bible; Early Christianity; Greco-Roman World;
+Hebrew Bible; New Testament; Rabbinic Judaism; Second Temple Judaism.
 
 \end{document}
