--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,25 +1,31 @@
-\ProvidesFile{grades.tex}[2018/05/28 v2.4 -- Course policy]
+\ProvidesFile{grades.tex}[2023/09/06 v2.5 -- Course policy]
 
-AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
-Calendar} provides guidelines and detailed criteria for academic
-assessment. Marks are assigned by letter grade using these benchmarks
-(summarized in \autoref{grade-syst}). Note that, at AST, a grade of
-``C'' is deemed ``Unsatisfactory.''
+AST's \href{https://www.astheology.ns.ca/students/resources.html}{Academic
+Calendar} provides guidelines and criteria for academic assessment. Marks are
+assigned by letter grade using these benchmarks. Note that graduate and
+undergraduate students are assessed on a different scales at AST (see
+\autoref{grade-syst}). For graduate students, a grade of C is deemed
+``Unsatisfactory,'' whereas for undergraduate (BTh) students a C is
+``Satisfactory'' and the grade of D is possible for ``Marginal'' performance.
+Other grades have different definitions at present, too.
 
 \begin{table}[htbp]
  \centering
  {\lining\footnotesize
- \begin{tabular}{lll}
+ \begin{tabular}{lll|ll}
    \toprule
-   A+          & 94--100    & Exceptional               \\
-   A           & 87--93     & Outstanding               \\
-   A\char"2212 & 80--86     & Excellent                 \\ [1ex]
-   B+          & 77--79     & Good                      \\
-   B           & 73--76     & Acceptable                \\
-   B\char"2212 & 70--72     & Marginally Acceptable     \\ [1ex]
-   C           & 60--69     & Unsatisfactory            \\
-   F           & 0--59      & Failure                   \\
-   FP          & 0          & Failure due to Plagiarism \\
+               & \multicolumn{2}{c|}{Graduate Courses}   & \multicolumn{2}{c}{Undergraduate Courses} \\
+               \cline{2-5}
+   A+          & 94--100    & Exceptional               & 90--100    & Excellent                 \\
+   A           & 87--93     & Outstanding               & 85--89     & Excellent                 \\
+   A\char"2212 & 80--86     & Excellent                 & 80--84     & Excellent                 \\ [1ex]
+   B+          & 77--79     & Good                      & 75--79     & Good                      \\
+   B           & 73--76     & Acceptable                & 70--74     & Good                      \\
+   B\char"2212 & 70--72     & Marginally Acceptable     &            &                           \\ [1ex]
+   C           & 60--69     & Unsatisfactory            & 60--69     & Satisfactory              \\
+   D           &            &                           & 50--59     & Marginal                  \\
+   F           & 0--59      & Failure                   & 0--49      & Failure                   \\
+   FP          & 0          & Failure due to Plagiarism & 0          & Failure due to Plagiarism \\
    \bottomrule
  \end{tabular}}
  \caption{Outline of Grades at AST}
