clarify new assignments, language

--- a/BF/BF 1001-Driver 2023.tex
+++ b/BF/BF 1001-Driver 2023.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[4.0-WIP]{BF 1001}
+\coursecode[4.0]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -296,15 +296,15 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item \textbf{Notes and quotes} will be solicited from students at the
-	start of each class. These are to be drawn from the primary reading
-	assigned for each week. What do you note about the material on this
-	reading? What words, phrases, or verses stand out to you from the
-	\cite{njps} edition? Pay attention to the things you notice from a
-	survey of large sections of the Bible. Stay alert, too, to details that
-	strike you from the translation and presentation of the Hebrew
-	(Masoretic) text. Make notes as you read. Finally, be prepared to share
-	three minutes of highlights with the class. Participation is required.
+	\item \textbf{Notes and quotes} will be solicited from students at the start
+	of each class. These are to be drawn from the primary reading assigned for
+	each week. What do you note about the material on this occasion? What words,
+	phrases, or verses stand out to you from the \cite{njps} translation? Pay
+	attention to things you notice from a survey of large sections of the Bible.
+	Stay alert, too, to details that strike you from the English edition of the
+	Hebrew (Masoretic) text. Make notes as you read. Finally, be prepared to
+	share highlights with the class (three minutes maximum). Participation is
+	required.
 
 %	\item \textbf{Writing prompts} will be given throughout the
 %	semester. They are low-risk writing exercises designed to encourage
@@ -389,35 +389,33 @@ The grade structure for \ccode has the following elements.
 
 	\begin{enumerate}
 
-		\item Each student in the course must lead a discussion of one
-		chapter from the primary reading, to occur in the same week in which
-		it is assigned. Any chapter may be selected. Discussion should last
-		twenty minutes. It should begin with a brief (maximum five-minute)
-		overview of the chapter and critical issues raised by it. The
-		balance of the time should be spent helping the class discover,
-		elaborate, reflect on, test, or otherwise explore the meaning of the
-		passage. Vital to success here is the ability to ask good questions
-		of the Bible.
+		\item Each student in the course must lead a discussion of one chapter
+		from the primary reading, to occur in the same week in which it is
+		assigned. Any chapter may be selected. Discussion should last twenty
+		minutes. It should begin with a brief overview (five minutes maximum) of
+		the chapter and critical issues raised by it. The balance of the time
+		should be spent helping the class discover, elaborate, reflect on, test,
+		or otherwise explore the meaning of the passage. Vital to success here
+		is the ability to ask good questions of the Bible.
 		
 		\item Each graduate student must lead a second discussion on a
-		supplementary reading. If the reading selection deviates from what
-		is set in the syllabus, consult with the professor to make sure the
+		supplementary reading. If the reading selection deviates from what is
+		set in the syllabus, consult with the professor to make sure the
 		alternate reading is circulated at least one week in advance. These
-		seminars, too, should occur in the same week in which the material
-		is assigned and should last twenty minutes. The allocation of time
-		is different, however. Approximately fifteen minutes should be given
-		to summary and analysis, with just five minutes at the end for
-		questions and class discussion. The goal here is to report on the
-		results of an appreciative but critical inquiry into an example of
-		premier biblical interpretation.
+		seminars, too, should occur in the same week in which the material is
+		assigned and should last twenty minutes. The allocation of time is
+		different, however. Approximately fifteen minutes should be given to
+		summary and analysis, with just five minutes at the end for questions
+		and class discussion. The goal here is for advanced degree students to
+		report on the results of critical inquiries into various noteworthy
+		examples of biblical interpretation.
 		
-		\item Students are invited to align their writing with their work
-		planning and leading seminars. For example, it is perfectly
-		acceptable to lead a discussion on the biblical chapter in which the
-		short passage for your exegetical essay appears. It is also
-		acceptable to let class discussion spur revisions to your paper, of
-		course with the understanding that you credit others appropriately
-		for their input.
+		\item Students are encouraged to align their essay writing with their
+		seminar topics. For example, it is perfectly acceptable to lead a
+		discussion on the biblical chapter in which the short passage for your
+		exegetical essay appears. It is also acceptable to let class discussion
+		spur revisions to your paper, of course with the understanding that you
+		credit others appropriately for their input.
 
 	\end{enumerate}
 
@@ -535,9 +533,10 @@ distributed as supplementary texts, as per \autoref{supplementary}.
 \endgroup
 
 For additional literature, I highly recommend exploring \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.oxfordbibliographies.com/obo/page/biblical-studies}{Oxford Bibliographies: Biblical Studies (Full Text)}.
-You can access the database while on campus or remotely with your OpenAthens
-credentials. Numerous articles by subject-area specialists appear under such
-headings as: Ancient Near East; Bible; Early Christianity; Greco-Roman World;
-Hebrew Bible; New Testament; Rabbinic Judaism; Second Temple Judaism.
+You can access the database automatically while on campus or remotely with your
+OpenAthens credentials. Numerous articles by subject-area specialists appear
+under such headings as: Ancient Near East; Bible; Early Christianity;
+Greco-Roman World; Hebrew Bible; New Testament; Rabbinic Judaism; Second Temple
+Judaism.
 
 \end{document}
