--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -3,11 +3,11 @@
 AST's \href{https://www.astheology.ns.ca/students/resources.html}{Academic
 Calendar} provides guidelines and criteria for academic assessment. Marks are
 assigned by letter grade using these benchmarks. Note that graduate and
-undergraduate students are assessed on a different scales at AST (see
+undergraduate programs are currently assessed on a different scales at AST (see
 \autoref{grade-syst}). For graduate students, a grade of C is deemed
-``Unsatisfactory,'' whereas for undergraduate (BTh) students a C is
+``Unsatisfactory,'' whereas for undergraduate (BTh) students, a C is
 ``Satisfactory'' and the grade of D is possible for ``Marginal'' performance.
-Other grades have different definitions at present, too.
+Other grades have different definitions, too.
 
 \begin{table}[htbp]
  \centering
