tidy up grades table

--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -12,10 +12,10 @@ Other grades have different definitions, too.
 \begin{table}[htbp]
  \centering
  {\lining\footnotesize
- \begin{tabular}{lll|ll}
+ \begin{tabular}{l|ll|ll}
    \toprule
-               & \multicolumn{2}{c|}{Graduate Courses}   & \multicolumn{2}{c}{Undergraduate Courses} \\
-               \cline{2-5}
+   \multicolumn{1}{l}{} & \multicolumn{2}{c}{Graduate Courses}   & \multicolumn{2}{c}{Undergraduate Courses} \\
+   \midrule %\cline{2-5}
    A+          & 94--100    & Exceptional               & 90--100    & Excellent                 \\
    A           & 87--93     & Outstanding               & 85--89     & Excellent                 \\
    A\char"2212 & 80--86     & Excellent                 & 80--84     & Excellent                 \\ [1ex]
@@ -28,6 +28,6 @@ Other grades have different definitions, too.
    FP          & 0          & Failure due to Plagiarism & 0          & Failure due to Plagiarism \\
    \bottomrule
  \end{tabular}}
- \caption{Outline of Grades at AST}
+ \caption{Summary Definitions of Grades at AST}
  \label{grade-syst}
 \end{table}
